Fixed Dark Mode toggler overlapping when screen is shrunk less than 768px

--- a/docs/styles/theme.css
+++ b/docs/styles/theme.css
@@ -63,3 +63,9 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
+@media (max-width: 768px) {
+  .switch {
+    padding-right: 5%;
+  }
+}
